err/pyshanb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyshanb'...
Compiling './lib/python3.5/site-packages/pyshanb/_werkzeug.py'...
***   File "./lib/python3.5/site-packages/pyshanb/_werkzeug.py", line 24
    raise tp, value, tb
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyshanb/cmdoption.py'...
***   File "./lib/python3.5/site-packages/pyshanb/cmdoption.py", line 88
    print 'settings: ', options.settings
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyshanb/color.py'...
***   File "./lib/python3.5/site-packages/pyshanb/color.py", line 87
    print color('hello')
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyshanb/conf.py'...
***   File "./lib/python3.5/site-packages/pyshanb/conf.py", line 131
    print 'username:', settings.username
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyshanb/iciba.py'...
***   File "./lib/python3.5/site-packages/pyshanb/iciba.py", line 65
    re_pos = re.compile(ur"""(?ix)<strong\s+class="fl"[^>]*>([^<]+)
                            </strong>\s*(<span\s+class="label_list">\s*
                            (?:<label>(?:[^<]+)</label>\s*)+</span>)
                            """)
                                                                   
                                                                       
                                                                    
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyshanb/main.py'...
***   File "./lib/python3.5/site-packages/pyshanb/main.py", line 63
    print encode(msg)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyshanb/plugins'...
Compiling './lib/python3.5/site-packages/pyshanb/plugins/youdao.py'...
***   File "./lib/python3.5/site-packages/pyshanb/plugins/youdao.py", line 67
    print '\n' + 'youdao.com- %s --begin'.center(40, '-') % word_color
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyshanb-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
